# PipeHat-npp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: 00-ASSESSMENT.md  01-ARCHITECTURE.md  02-HL7-GRAMMAR.md  03-FEATURES.md  04-RISKS.md  05-CODE-REVIEW.md  06-ROADMAP.md
include/npp/: Notepad_plus_msgs.h  PluginInterface.h  Sci_Position.h  Scintilla.h
src/: ConformanceProfile.h  Docking.h  HL7Escape.h  HL7Lexer.cpp  HL7Lexer.h  MessageDiff.h  MessageIndex.h  MessageRefresh.h  MessageTreeView.cpp  MessageTreeView.h  MllpConfig.h  MllpProtocol.h  MllpTransport.cpp  MllpTransport.h  PHIScrubber.cpp  PHIScrubber.h  PluginDefs.h  SciUtils.h  ScintillaStyler.cpp  ScintillaStyler.h  SegmentDB.cpp  SegmentDB.h  SettingsDialog.cpp  SettingsDialog.h  TriggerEventDB.h  UpdateCheck.cpp  UpdateCheck.h  Validator.h  main.cpp  resource.h  resource.rc
tests/: MessageIndexTest.cpp  MessageRefreshTest.cpp  SegmentIDTest.cpp
